# poker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ocr.txt  requirements.txt  run_test.py  test_benchmark_forbidden.py  test_benchmark_solver.py  test_benchmark_solver_opt.py  test_opt_solver.py  test_opt_solver10.py  test_opt_solver11.py  test_opt_solver12.py  test_opt_solver2.py  test_opt_solver3.py  test_opt_solver4.py  test_opt_solver5.py  test_opt_solver6.py  test_opt_solver7.py  test_opt_solver8.py  test_opt_solver9.py  test_tracker_exploits.py
.github/workflows/: ci.yml
.jules/: bolt.md
apps/api/: Dockerfile  __init__.py  main.py  pipeline.py  routes.py
apps/ui/: Dockerfile  app.js  index.html  style.css
data/: augment.py  dataset.py
data/synthetic_tables/: __init__.py  generator.py
evals/: README.md  bench_evaluators.py  bench_solver.py  bench_tracker.py  bench_tracker_logic.py
infra/dev/: setup.sh
infra/nginx/: nginx.conf
libs/common/: __init__.py  profiler.py  schemas.py  schemas_ext.py
services/capture_agent/: __init__.py  benchmarks.py  capture.py
services/explainer/: __init__.py  explainer.py
services/ocr_core/: __init__.py  backends.py  ocr.py  (+1 more)
tests/: conftest.py  test_calculator.py  test_capture.py  test_dataset.py  test_evaluator.py  test_ocr.py  test_opponent_tracker.py  test_pipeline.py  test_policy.py  test_preflop_charts.py  test_profiler.py  test_range_models.py  test_schemas.py  test_solver.py  test_state_engine.py  test_tracker.py  test_vision.py
(+16 files in other folders)
